[metadata]
name = crunkybot-twitch
version = 0.0.1
author = getcrunkfriday
author_email = getcrunkfriday@gmail.com
description = CrunkyBot chat bot for Twitch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getcrunkfriday/cockeyedgaming
project_urls =
    Bug Tracker = https://github.com/getcrunkfriday/cockeyedgaming/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src